# roundtable

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
assets/: demo.tape  twitter.tape
examples/: code-review.toml  debate.toml  microservices.toml  self-review.toml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/roundtable/: LICENSE  package.json
plugins/roundtable/.claude-plugin/: plugin.json
plugins/roundtable/skills/code-review/: SKILL.md
plugins/roundtable/skills/debate/: SKILL.md
plugins/roundtable/skills/microservices/: SKILL.md
src/: duo.rs  main.rs
